Fix for chrome://cast getting blocked by content security policy.

The provided policy for the cast UI was "object-src *", which used to
include "chrome:" until a recent CL changed the use of “*” from a
blacklist (that did not include "chrome:") to a whitelist (that still does
not include "chrome:"). Because of this, the policy just needs to be updated
to specifically allow "chrome:" now.

BUG=634168

Review-Url: https://codereview.chromium.org/2347503002
Cr-Commit-Position: refs/heads/master@{#418883}

Former-commit-id: 67b0b5d046af90992bc94390a90647d7b4a00353